--- a/css/global/header.css
+++ b/css/global/header.css
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   gap: 20px;
   justify-content: space-between;
-  padding-left: 20px;
+  padding-top: 20px;
   padding-bottom: 20px;
 
 }
