--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,4 @@
 @import "./utilidades/tipografia.css";
 @import "./utilidades/cores.css";
 @import "./bicicletas/bicicletas-listas.css";
+@import "./home/tecnologia.css";
