--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,6 @@
 @import "./utilidades/cores.css";
 @import "./bicicletas/bicicletas-listas.css";
 @import "./home/tecnologia.css";
+@import "./home/parceiros.css";
+
+
