--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,7 @@
 @import "./bicicletas/bicicletas-listas.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
+@import "./home/depoimento.css";
+
 
 
