--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
+@import "./seguros/seguros.css";
+@import "./global/footer.css";
+
+
 
 
 
