--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 @import "./home/depoimento.css";
 @import "./seguros/seguros.css";
 @import "./global/footer.css";
+@import "./termos/termos.css";
+
 
 
 
