--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,4 @@
 @import "./seguros/seguros.css";
 @import "./global/footer.css";
 @import "./termos/termos.css";
-
-
-
-
-
-
+@import "./bicicletas/bicicletas.css";
