--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,8 @@
 @import "./bicicletas/bicicletas.css";
 @import "./seguros/perguntas.css";
 @import "./seguros/vantagens.css";
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
+
 
