--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,6 @@
 @import "./seguros/vantagens.css";
 @import "./bicicleta/bicicleta.css";
 @import "./bicicleta/seguro.css";
-
-
-
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+@import "./utilidades/formulario.css";
